slurm/k8s_base/practice/8.cert-manager/tls-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: my.s<свой номер логина>.edu.slurm.io
    http:
      paths:
      - backend:
          serviceName: my-service
          servicePort: 80
  tls:
  - hosts:
    - my.s<свой номер логина>.edu.slurm.io
    secretName: my-tls
